# megabasterd-py

./: .dockerignore  .gitignore  Dockerfile  README.md  desktop.py  desktop.spec  docker-compose.yml  pyproject.toml
.github/workflows/: desktop-release.yml  docker-publish.yml
app/: main.py  state.py
app/api/: routes_accounts.py  routes_folder.py  routes_settings.py  routes_transfers.py  ws.py
app/core/: chunks.py  crypto.py  errors.py  hashcash.py  link_parser.py  mega_api.py  proxy_manager.py
app/features/: folder_tree.py  splitter.py  thumbnailer.py
app/storage/: account_store.py  db.py
app/streaming/: video_proxy.py
app/transfers/: concurrency.py  download.py  mac.py  upload.py
tests/: test_account_store.py  test_chunks.py  test_concurrency.py  test_crypto.py  test_download.py  test_folder_nodes.py  test_mega_api_smartproxy.py  test_proxy_manager.py  test_routes_settings.py  test_routes_transfers.py  test_splitter.py  test_streaming.py  test_thumbnailer.py  test_transfer_settings_integration.py  test_upload.py
web/static/css/: style.css
web/static/js/: app.js  settings.js  theme.js  watch.js
web/templates/: index.html  settings.html  watch.html
