[project]
name = "megabasterd-py"
version = "0.1.0"
description = "Python/web port of MegaBasterd, a MEGA.nz transfer client"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[socks]>=0.27",
    "pycryptodome>=3.20",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "pillow>=10.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
